# emaigov

./: .gitignore  README.md  config.json  pyproject.toml
emaigov/: constants.py  gravarResultados.py  gravar_resultados.py  json2csv.py
