[tool.poetry]
name = "emailgov"
version = "0.1.0"
description = ""
authors = ["Abelino Punhal <abelino.punhal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
